# bazel_elfutils

./: .bazelrc  0001.patch  BUILD.bazel  MODULE.bazel  README.md  remove-rpath-link.patch
.github/workflows/: publish.yml  tag-and-release.yml  test.yml
integration/: BUILD.bazel  MODULE.bazel
