module(
    name = "integration",
    version = "0.0.0",
)

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.1")
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)


bazel_dep(name = "elfutils", version = "0.0.0")
local_path_override(
    module_name = "elfutils",
    path = "../",
)
